--- a/apps/smart-contracts/package.json
+++ b/apps/smart-contracts/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile": "hardhat compile",
+    "start": "hardhat node",
+    "deploy": "hardhat run scripts/deploy.ts --network localhost",
+    "test": "hardhat test"
   },
   "keywords": [],
   "author": "",
