--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,9 +1,7 @@
 {
   "compilerOptions": {
-    "types" : ["node"],
-    "typeRoots": [
-      "node_modules/@types"
-    ],
+    "types": ["node"],
+    "typeRoots": ["node_modules/@types"],
     "target": "ES2017",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
