--- a/apps/smart-contracts/package.json
+++ b/apps/smart-contracts/package.json
@@ -15,6 +15,7 @@
   "type": "commonjs",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "hardhat": "^2.22.19"
+    "hardhat": "^2.22.19",
+    "typescript": "^5.8.3"
   }
 }
