--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -41,12 +41,14 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
+    "firebase": "^11.6.0",
+    "firestore": "^1.1.6",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.486.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
-    "react-day-picker": "^8.10.1",
+    "react-day-picker": "^9.6.4",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-resizable-panels": "^2.1.7",
