--- a/apps/smart-contracts/package.json
+++ b/apps/smart-contracts/package.json
@@ -17,5 +17,8 @@
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "hardhat": "^2.22.19",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "ethers": "^6.13.5"
   }
 }
