--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -42,6 +42,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
     "firebase": "^11.6.0",
+    "firebase-config": "^1.0.0",
     "firestore": "^1.1.6",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.486.0",
