--- a/apps/smart-contracts/package.json
+++ b/apps/smart-contracts/package.json
@@ -20,6 +20,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "ethers": "^6.13.5"
+    "ethers": "^6.13.5",
+    "firebase": "^11.6.0"
   }
 }
