--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -29,7 +29,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "services/models/Auth.jsx"
+    "services/models/Auth.tsx"
   ],
   "exclude": ["node_modules"]
 }
