--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -29,8 +29,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "tailwindcss.config.ts"
-    "services/models/Auth.tsx"
+    "tailwindcss.config.ts",
+    "services/models/Auth.tsx",
   ],
   "exclude": ["node_modules"]
 }
