Revert "Update brand and landing page"

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -29,8 +29,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "tailwindcss.config.ts",
-    "services/models/Auth.tsx",
+    "services/models/Auth.tsx"
   ],
   "exclude": ["node_modules"]
 }
